--- a/AndroidScout/app/src/main/res/layout/activity_open_screen.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_open_screen.xml
@@ -2,20 +2,70 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_vertical"
+    android:background="@color/screen_background"
     >
 
+    <TextView
+        android:layout_gravity="top|center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Scouting Type"
+        android:textSize="50dp"
+        android:textColor="@color/text_normal"
+        android:textAlignment="center"
+        android:layout_marginVertical="20dp" />
+
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_gravity="center"
+
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="50dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
         <Button
+            android:layout_gravity="center"
+            android:layout_marginVertical="5dp"
+
+            android:background="@drawable/back"
+            android:textColor="@color/text_normal"
+
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:id="@+id/standScoutButton"
             android:text="TAKE ME TO THE SCOUTING"/>
 
+        <Button
+            android:layout_gravity="center"
+            android:layout_marginVertical="5dp"
 
+            android:background="@drawable/back"
+            android:textColor="@color/text_normal"
+
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:id="@+id/pitScoutButton"
+            android:text="PIT SCOUTING!"/>
 
     </LinearLayout>
+
+    <TextView
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:textAlignment="center"
+        android:textColor="#FF0000"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:text=""
+
+        android:layout_marginVertical="5dp"
+
+        android:id="@+id/messageText"/>
 
 </LinearLayout>
