--- a/AndroidScout/app/src/main/res/layout/number_picker_layout.xml
+++ b/AndroidScout/app/src/main/res/layout/number_picker_layout.xml
@@ -10,7 +10,7 @@
         android:padding="0dp"
         android:text="-"
         android:background="@drawable/btn_back"
-        android:textColor="#AAAAAA"
+        android:textColor="@color/text_weak"
     />
     <EditText
         android:id="@+id/display"
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:text="0"
         android:inputType="number"
-        android:textColor="#AAAAAA"
+        android:textColor="@color/text_weak"
         android:background="@drawable/back"
         android:gravity="center"
         />
@@ -28,7 +28,7 @@
         android:layout_height="match_parent"
         android:padding="0dp"
         android:text="+"
-        android:textColor="#AAAAAA"
+        android:textColor="@color/text_weak"
         android:background="@drawable/btn_back"
         />
 </LinearLayout>
