--- a/AndroidScout/app/src/main/res/layout/spinner_dropdown_item_custom.xml
+++ b/AndroidScout/app/src/main/res/layout/spinner_dropdown_item_custom.xml
@@ -2,9 +2,10 @@
 <CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     style="?android:attr/spinnerDropDownItemStyle"
-    android:background="@drawable/back"
-    android:textColor="#AAAAAA"
+    android:background="@drawable/btn_back"
+    android:textColor="@color/text_weak"
     android:singleLine="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:ellipsize="marquee"/>
+    android:ellipsize="marquee"
+    android:minHeight="50dp" />
