--- a/AndroidScout/app/src/main/res/layout/activity_pit_scout.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_pit_scout.xml
@@ -479,7 +479,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/playTypeCollectedTextView"
+                android:id="@+id/playTypeTextView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -511,12 +511,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/startingPositionCollectedTextView"
+                android:id="@+id/startingPositionTextView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Cargo Level"
+                android:text="Starting Position"
                 android:textAlignment="center"
                 android:textColor="@color/text_normal"
                 android:textSize="15sp" />
