--- a/AndroidScout/app/src/main/res/layout/activity_open_screen.xml
+++ b/AndroidScout/app/src/main/res/layout/activity_open_screen.xml
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:id="@+id/standScoutButton"
-            android:text="TAKE ME TO THE SCOUTING"/>
+            android:text="Match Scouting"/>
 
         <Button
             android:layout_gravity="center"
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:id="@+id/pitScoutButton"
-            android:text="PIT SCOUTING!"/>
+            android:text="Pit Scouting"/>
 
     </LinearLayout>
 
